[package]
name = "drovix-portal-desktop"
version = "0.1.1"
description = "Drovix Portal — desktop client for portal.drovix.com"
authors = ["Drovix"]
edition = "2021"

[lib]
name = "drovix_portal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
